--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,13 @@
     "isolatedModules": true,
     "noEmit": true,
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "src/detector.worker.ts",
+    "src/detectorClient.ts"
+  ]
 }
