--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,10 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+      
+      - name: List dist contents
+        working-directory: screen-region-detector-client
+        run: ls -la dist/
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
