Simplify CI/CD workflow - combine build and deploy jobs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           
       - name: Install dependencies
         working-directory: screen-region-detector-client
@@ -32,13 +32,11 @@ jobs:
         
       - name: Build
         working-directory: screen-region-detector-client
-        run: npm run build
-        env:
-          NODE_ENV: production
-      
-      - name: List dist contents
-        working-directory: screen-region-detector-client
-        run: ls -la dist/
+        run: |
+          export NODE_ENV=production
+          npm run build
+          ls -la dist/
+          echo "Build completed successfully"
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -48,13 +46,6 @@ jobs:
         with:
           path: screen-region-detector-client/dist
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
