--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
+    "declaration": true,
+    "declarationDir": "./dist",
+    "emitDeclarationOnly": false,
+    "outDir": "./dist",
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
@@ -18,6 +22,7 @@
   "include": ["src"],
   "exclude": [
     "src/detector.worker.ts",
-    "src/detectorClient.ts"
+    "src/detectorClient.ts",
+    "src/main.ts"
   ]
 }
