--- a/package.json
+++ b/package.json
@@ -51,16 +51,17 @@
     "prepublishOnly": "npm run build:lib"
   },
   "dependencies": {
+    "acorn": "^8.16.0",
     "onnxruntime-web": "^1.17.0",
     "tesseract.js": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0"
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11"
   },
   "engines": {
     "node": ">=16.0.0"
